getting rid of unnecessary slashes

--- a/css/projects.css
+++ b/css/projects.css
@@ -1,7 +1,7 @@
 /*-----------------------#project denotes standards consistent between pages-----------------*/ 
 @font-face{
     font-family:FreightDisp BookIta;
-    src:url(fonts/FreightDisp Pro Book Italic.otf);
+    src:url('fonts/FreightDisp Pro Book Italic.otf');
 }
 @font-face{
     font-family: 'Neue Montreal Reg';
