quotes around fonts

--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,22 @@
 @font-face{
   font-family:  Neue Montreal Reg;
-  src: url(fonts/neuemontreal-regular.otf);
+  src: url('fonts/neuemontreal-regular.otf');
 }
 @font-face{
   font-family:  Neue Montreal Med;
-  src: url(fonts/neuemontreal-medium.otf);
+  src: url('fonts/neuemontreal-medium.otf');
 }
 @font-face{
   font-family:  FreightIta;
-  src: url(fonts/FreightDisp\ Pro\ Light\ Italic.otf);
+  src: url('fonts/FreightDisp\ Pro\ Light\ Italic.otf');
 }
 @font-face{
   font-family:  FreightDisp;
-  src: url(fonts/FreightDisp\ Pro\ Light.otf);
+  src: url('fonts/FreightDisp\ Pro\ Light.otf');
 }
 @font-face{
   font-family:  Neue Montreal MedIta;
-  src: url(fonts/neuemontreal-mediumitalic.otf);
+  src: url('fonts/neuemontreal-mediumitalic.otf');
 }
 
 ::selection{
