--- a/css/projects.css
+++ b/css/projects.css
@@ -5,11 +5,11 @@
 }
 @font-face{
     font-family: 'Neue Montreal Reg';
-    src: url(fonts/neuemontreal-regular.otf);
+    src: url('fonts/neuemontreal-regular.otf');
   }
 @font-face{
     font-family: 'Reconna';
-    src: url(fonts/ReconnaSerif.otf);
+    src: url('fonts/ReconnaSerif.otf');
   }
 
 body{
