--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,11 @@
 }
 @font-face{
   font-family:  FreightIta;
-  src: url('fonts/FreightDisp\ Pro\ Light\ Italic.otf');
+  src: url('fonts/FreightDisp Pro Light Italic.otf');
 }
 @font-face{
   font-family:  FreightDisp;
-  src: url('fonts/FreightDisp\ Pro\ Light.otf');
+  src: url('fonts/FreightDisp Pro Light.otf');
 }
 @font-face{
   font-family:  Neue Montreal MedIta;
