--- a/css/projects.css
+++ b/css/projects.css
@@ -1,14 +1,14 @@
 /*-----------------------#project denotes standards consistent between pages-----------------*/ 
 @font-face{
-    font-family:FreightDisp BookIta;
+    font-family: "FreightDisp BookIta";
     src:url('fonts/FreightDispProBookItalic.otf');
 }
 @font-face{
-    font-family: 'Neue Montreal Reg';
+    font-family: "Neue Montreal Reg";
     src: url('fonts/neuemontrealregular.otf');
   }
 @font-face{
-    font-family: 'Reconna';
+    font-family: "Reconna";
     src: url('fonts/ReconnaSerif.otf');
   }
 
@@ -58,7 +58,7 @@ body{
     font-size:16px;
     line-height:1.3;
     margin-left:2px;
-    font-family: Neue Montreal Med;
+    font-family: "Neue Montreal Med";
     top: 140px;
     padding-top:10px;
     max-width: 100vw;
@@ -97,7 +97,7 @@ body{
 }
 #description a{
     font-size:16px;
-    font-family: Neue Montreal MedIta;
+    font-family: "Neue Montreal MedIta";
 }
 .detail{
     font-size:14px;
@@ -201,7 +201,7 @@ grid-row:3;
 textarea {
     color:#111111;
     overflow:hidden;
-    font-family: Reconna;
+    font-family: "Reconna";
     font-size: 30px;
     height:150px;
     width: auto;
