--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,21 @@
 @font-face{
-  font-family:  Neue Montreal Reg;
+  font-family:  "Neue Montreal Reg";
   src: url('fonts/neuemontrealregular.otf');
 }
 @font-face{
-  font-family:  Neue Montreal Med;
+  font-family:  "Neue Montreal Med";
   src: url('fonts/neuemontrealmedium.otf');
 }
 @font-face{
-  font-family:  FreightIta;
+  font-family:  "FreightIta";
   src: url('fonts/FreightDispProLightItalic.otf');
 }
 @font-face{
-  font-family:  FreightDisp;
+  font-family:  "FreightDisp";
   src: url('fonts/FreightDispProLight.otf');
 }
 @font-face{
-  font-family:  Neue Montreal MedIta;
+  font-family:  "Neue Montreal MedIta";
   src: url('fonts/neuemontrealmediumitalic.otf');
 }
 
@@ -25,7 +25,7 @@
 body {
   max-width: 100vw;
   max-height: 100vh;
-	font-family: Neue Montreal Med;
+	font-family: "Neue Montreal Med", sans-serif;
 	font-size: 16px;
 	line-height: 1;
 	background-color: rgba();
@@ -36,7 +36,7 @@ body {
 }
 .dot{
   font-size: 16px;
-  font-family: FreightIta;
+  font-family: "FreightIta";
 }
 .top{
   z-index:100;
@@ -57,7 +57,7 @@ box-shadow: 0px -1px 11px 12px rgba(255,255,255,1);
 }
 .top p, a{
   color: black;
-  font-family:  Neue Montreal Med;
+  font-family:  "Neue Montreal Med";
   font-size: 1.7em;
   margin-right: 2vw;
   text-align: left;
@@ -108,7 +108,7 @@ a{
  position: fixed;
  font-size: 1.9em;;
  line-height:1.1;
- font-family: Times New Roman;
+ font-family: 'Times New Roman';
  top: 4vh;
  left: 0;
  width: 100vw;
@@ -135,7 +135,7 @@ a{
     position: fixed;
     font-size: 3em;;
     line-height:1.1;
-    font-family: Times New Roman;
+    font-family: "Times New Roman";
     top: 10vh;
     left: 0;
     width: 98vw;
