--- a/css/projects.css
+++ b/css/projects.css
@@ -1,11 +1,11 @@
 /*-----------------------#project denotes standards consistent between pages-----------------*/ 
 @font-face{
-    font-family: "FreightDisp BookIta";
-    src:url('fonts/FreightDispProBookItalic.otf');
+    font-family: "Serif Book Italic";
+    src:url('fonts/SerifBookItalic.otf');
 }
 @font-face{
-    font-family: "Neue Montreal Reg";
-    src: url('fonts/neuemontrealregular.otf');
+    font-family: "SansRegular";
+    src: url('fonts/SansRegular.otf');
   }
 @font-face{
     font-family: "Reconna";
@@ -58,7 +58,7 @@ body{
     font-size:16px;
     line-height:1.3;
     margin-left:2px;
-    font-family: "Neue Montreal Med";
+    font-family: "Sans Medium";
     top: 140px;
     padding-top:10px;
     max-width: 100vw;
@@ -97,7 +97,7 @@ body{
 }
 #description a{
     font-size:16px;
-    font-family: "Neue Montreal MedIta";
+    font-family: "Sans Medium Italic";
 }
 .detail{
     font-size:14px;
