--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,19 @@
+
 @font-face{
-  font-family:  "Neue Montreal Reg";
-  src: url('fonts/neuemontrealregular.otf');
+  font-family:  "Sans Medium";
+  src: url('fonts/SansMedium.otf');
 }
 @font-face{
-  font-family:  "Neue Montreal Med";
-  src: url('fonts/neuemontrealmedium.otf');
+  font-family:  "Serif Light Italic";
+  src: url('fonts/SerifLightItalic.otf');
 }
 @font-face{
-  font-family:  "FreightIta";
-  src: url('fonts/FreightDispProLightItalic.otf');
+  font-family:  "Serif Light";
+  src: url('fonts/SerifLight.otf');
 }
 @font-face{
-  font-family:  "FreightDisp";
-  src: url('fonts/FreightDispProLight.otf');
-}
-@font-face{
-  font-family:  "Neue Montreal MedIta";
-  src: url('fonts/neuemontrealmediumitalic.otf');
+  font-family:  "Sans Medium Italic";
+  src: url('fonts/SansMediumItalic.otf');
 }
 
 ::selection{
@@ -25,7 +22,7 @@
 body {
   max-width: 100vw;
   max-height: 100vh;
-	font-family: "Neue Montreal Med", sans-serif;
+	font-family: "Sans Medium", sans-serif;
 	font-size: 16px;
 	line-height: 1;
 	background-color: rgba();
@@ -36,7 +33,7 @@ body {
 }
 .dot{
   font-size: 16px;
-  font-family: "FreightIta";
+  font-family: "Serif Light Italic";
 }
 .top{
   z-index:100;
@@ -57,7 +54,7 @@ box-shadow: 0px -1px 11px 12px rgba(255,255,255,1);
 }
 .top p, a{
   color: black;
-  font-family:  "Neue Montreal Med";
+  font-family:  "Sans Medium";
   font-size: 1.7em;
   margin-right: 2vw;
   text-align: left;
@@ -175,7 +172,7 @@ a{
   max-width: 100%;
 }
 .labelita{
-  font-family:  FreightIta;
+  font-family: "Serif Light Italic";
 }
 .pic{
   position:relative;
