--- a/css/projects.css
+++ b/css/projects.css
@@ -1,15 +1,15 @@
 /*-----------------------#project denotes standards consistent between pages-----------------*/ 
 @font-face{
-    font-family: "Serif Book Italic";
-    src:url('fonts/SerifBookItalic.otf');
+    font-family: 'Serif Book Italic';
+    src:url('fonts/SerifBookItalic.otf') format('opentype');
 }
 @font-face{
-    font-family: "SansRegular";
-    src: url('fonts/SansRegular.otf');
+    font-family: 'SansRegular';
+    src: url('fonts/SansRegular.otf') format('opentype');
   }
 @font-face{
-    font-family: "Reconna";
-    src: url('fonts/ReconnaSerif.otf');
+    font-family: 'Reconna';
+    src: url('fonts/ReconnaSerif.otf') format('opentype');
   }
 
 body{
