--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,19 @@
 
 @font-face{
-  font-family:  "Sans Medium";
-  src: url('fonts/SansMedium.otf');
+  font-family:  'Sans Medium';
+  src: url('fonts/SansMedium.otf') format('opentype');
 }
 @font-face{
-  font-family:  "Serif Light Italic";
-  src: url('fonts/SerifLightItalic.otf');
+  font-family:  'Serif Light Italic';
+  src: url('fonts/SerifLightItalic.otf') format('opentype');
 }
 @font-face{
-  font-family:  "Serif Light";
-  src: url('fonts/SerifLight.otf');
+  font-family:  'Serif Light';
+  src: url('fonts/SerifLight.otf') format('opentype');
 }
 @font-face{
-  font-family:  "Sans Medium Italic";
-  src: url('fonts/SansMediumItalic.otf');
+  font-family:  'Sans Medium Italic';
+  src: url('fonts/SansMediumItalic.otf') format('opentype');
 }
 
 ::selection{
@@ -22,7 +22,7 @@
 body {
   max-width: 100vw;
   max-height: 100vh;
-	font-family: "Sans Medium", sans-serif;
+	font-family: 'Sans Medium';
 	font-size: 16px;
 	line-height: 1;
 	background-color: rgba();
@@ -33,7 +33,7 @@ body {
 }
 .dot{
   font-size: 16px;
-  font-family: "Serif Light Italic";
+  font-family: 'Serif Light Italic';
 }
 .top{
   z-index:100;
@@ -54,7 +54,7 @@ box-shadow: 0px -1px 11px 12px rgba(255,255,255,1);
 }
 .top p, a{
   color: black;
-  font-family:  "Sans Medium";
+  font-family:  'Sans Medium';
   font-size: 1.7em;
   margin-right: 2vw;
   text-align: left;
