--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 
 @font-face{
-  font-family:  'Sans Medium';
-  src: url('fonts/SansMedium.otf') format('opentype');
+  font-family: 'NeueMontreal-Med';
+  src: url("fonts/NeueMontreal-Medium.otf");
 }
 @font-face{
   font-family:  'Serif Light Italic';
@@ -22,7 +22,7 @@
 body {
   max-width: 100vw;
   max-height: 100vh;
-	font-family: 'Sans Medium';
+	font-family: 'NeueMontreal-Med';
 	font-size: 16px;
 	line-height: 1;
 	background-color: rgba();
@@ -54,7 +54,7 @@ box-shadow: 0px -1px 11px 12px rgba(255,255,255,1);
 }
 .top p, a{
   color: black;
-  font-family:  'Sans Medium';
+  font-family: 'Sans Medium';
   font-size: 1.7em;
   margin-right: 2vw;
   text-align: left;
