--- a/css/style.css
+++ b/css/style.css
@@ -167,8 +167,7 @@ a{
   height: auto;
   color: black;
   font-size: 1.2em;
-  font-family: FreightDisp;
-  font-weight:200;
+  font-family: "Serif Light";
   margin-top: 3px;
   display: flex;
   flex-direction: row;
