--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
 }
 @font-face{
   font-family: 'TSerif Light';
-  src: url('fonts/Tserif Light.otf') format('opentype');
+  src: url('fonts/Tserif Light.otf');
 }
 
 ::selection{
