--- a/css/style.css
+++ b/css/style.css
@@ -579,6 +579,10 @@ display:none;
     flex-direction:column;
     overflow-y:scroll;
   }
+  .pic #label{
+    font-size:22px;
+    margin-top:8px;
+  }
   .pic{
     max-width:100%;
     width:101vw;
@@ -604,6 +608,7 @@ display:none;
 }
 
 @media (max-width: 600px) { 
+
 }
 
 @media (max-width: 575px) { 
