--- a/css/style.css
+++ b/css/style.css
@@ -98,11 +98,11 @@ a{
  margin-top: 80px;
  left: 0;
  width: 100vw;
- max-height: 100%;
+ max-height: 100vh;
+ overflow:hidden;
  padding: 10px 16px 16px 10px;
  display: grid;
  grid-template-columns: 35vw 58vw 1fr;
- grid-template-rows:33vh 33vh 33vh;
  justify-content:space-evenly;
 }
 #about p{
@@ -616,7 +616,7 @@ display:none;
 
 @media (max-width: 475px) { 
   #about p{
-    font-size:16px;
+    font-size:18px;
   }
 
 }
