--- a/css/style.css
+++ b/css/style.css
@@ -612,12 +612,26 @@ display:none;
   #homepage{
     width:95.5vw;
   }
+  .top{
+    padding-bottom:0px;
+  }
+  #about{
+    display:flex;
+    flex-direction:column;
+    align-items:flex-start;
+    margin-bottom:160px;
+  }
+  #about p{
+    top:0;
+    margin-top:150px;
+    margin-bottom:15px;
+  }
+  #about img{
+    max-width:96%;
+  }
 }
 
 @media (max-width: 475px) { 
-  #about p{
-    font-size:18px;
-  }
 
 }
 
