quick center on mobile

--- a/css/projects.css
+++ b/css/projects.css
@@ -322,6 +322,9 @@ input:focus::-webkit-slider-runnable-track {
     .top{   
         grid-template-columns: 35vw 65vw;
     }
+    .projectTitle{
+        text-align:center;
+    }
     .top .index{
                 display:none;
                 transition:.2s;
