crazy draggable homepage

--- a/css/style.css
+++ b/css/style.css
@@ -38,16 +38,20 @@
   background-color: yellow;
 }
 body {
-  max-width: 100vw;
+  max-width: 99vw;
   max-height: 100vh;
 	font-family: 'Sans Medium';
 	font-size: 16px;
 	line-height: 1;
-	background-color: rgba();
 	color: black;
 	margin: 6px 10px 10px 10px;
   left:16px;
   overflow-x: hidden;
+
+  transition: background-color 0.5s;
+  -webkit-transition: background-color 0.5s linear;
+  -ms-transition: background-color 0.5s linear;
+  transition: background-color 0.5s linear;
 }
 .dot{
   font-size: 16px;
@@ -59,16 +63,24 @@ body {
   display:grid;
   grid-template-columns: 35vw 38vw 27vw;
   flex-direction: row;
-  width: 99vw;
+  width: 98vw;
   padding-top:6px;
   flex-wrap:wrap;
   left:10px;
   right:10px;
+  padding-right:10px;
+  margin-right:10px;
   top:0;
   background-color:white;
   -webkit-box-shadow: 0px -1px 11px 12px rgba(255,255,255,1);
 -moz-box-shadow: 0px -1px 11px 12px rgba(255,255,255,1);
 box-shadow: 0px -1px 11px 12px rgba(255,255,255,1);
+
+transition-property: background-color, box-shadow;
+transition-duration: 0.5s, .5s;
+-webkit-transition: background-color 0.5s linear;
+-ms-transition: background-color 0.5s linear;
+transition: background-color 0.5s linear;
 }
 .top p, .top a, .bottom a, #projfooter{
   color: black;
@@ -80,10 +92,12 @@ box-shadow: 0px -1px 11px 12px rgba(255,255,255,1);
   margin-right: 2vw;
   text-align: left;
   cursor: pointer;
-  padding-right: 20px;
 }
 a{
   color:black;
+}
+.top a:last-of-type{
+  margin-right:20px;
 }
 .about{
   justify-self:flex-start;
@@ -96,6 +110,7 @@ a{
   flex-direction: column;
   position:fixed;
   bottom:10px;
+  z-index:100;
 }
 a{
   text-decoration: none;
@@ -117,34 +132,26 @@ a{
   grid-row:1;
   grid-column: 1/span 2;
 }
-/*.bigsmall{
-  font-family: "Saol Italic";
-  text-transform:uppercase;
-  font-size:30px;
-  padding-right:6px;
-  padding-left:6px;
-  left:0;
-  right:0;
-}*/
 #about{
  position: absolute;
  font-size: 1.9em;;
  line-height:1.1;
  font-family: 'Times New Roman';
- margin-top: 80px;
- margin-bottom:120px;
  left: 0;
- width: 100vw;
+ max-width: 100vw;
+ max-height:100vh;
+ bottom:160px;
+ top:0;
+ margin-top:80px;
  padding: 10px 16px 16px 10px;
  display: grid;
  grid-template-columns: 35vw 58vw 1fr;
- grid-template-rows: auto auto;
+ grid-template-rows: auto;
  justify-content:space-evenly;
- overflow-y:scroll;
 }
 #about p{
   mix-blend-mode:multiply;
-  grid-row:2;
+  grid-row:1;
   grid-column:2;
   max-width:60vw;
   align-self:flex-start;
@@ -155,7 +162,7 @@ a{
 #about img{
   position:relative;
   grid-column:1;
-  grid-row:2;
+  grid-row:1;
   max-width:90%;
   margin:0;
   padding:0;
@@ -176,6 +183,7 @@ a{
     height: 90vh;
     padding: 10px 16px 16px 10px;
     display: none;
+    overflow-y:hidden;
    }
   #index p{
     position:absolute;
@@ -185,7 +193,7 @@ a{
     top:30%;
     transform:translate(-50%, -50%) rotate(-2deg);
     text-align:center;
-    width:70vw;
+    width:80vw;
     z-index:10;
     background-color:transparent;
    }
@@ -218,31 +226,35 @@ a{
   font-family: "Saol";
 }
 .pic{
-  position:relative;
+  position:absolute;
   transition: .2s;
-  max-width:100%;
+  max-width:30vw;
+  min-width:20vw;
+  cursor:pointer;
+}
+.pic:hover{
+  cursor:move;
 }
 .pic img{
   position:relative;
   transition: .2s;
   max-width:100%;
 }
-.pic:hover{
-  cursor:pointer;
-}
 #homepage{
   max-width:98vw;
-  height:96%;
+  max-height:96vh;
   margin-top:3vh;
-  display:grid;
-  position:absolute;
-  grid-template-rows: 25% 25% 25% 25%;
+  position:fixed;
+  /*display:grid;
   grid-template-columns: 25% 25% 25% 25%;
-  column-gap:10px;
-  row-gap:6vh;
+  grid-template-rows:33% 33% 33%;
+  grid-row-gap: 6px;
+  grid-column-gap:6px;*/
+  top:10px;
+  left:10px;
 }
 
-.soundscapes{
+/*.soundscapes{
   grid-column: 2;
   grid-row:2/span 2;
   align-self:center;
@@ -267,6 +279,19 @@ a{
   grid-row:2/span 2;
   align-self:center;
   margin-top:140px;
+} */
+
+/*----------------------------------drag shit--------------------------------*/
+.dragTitle{
+  font-size: 1.8rem;
+  position:absolute;
+  bottom:10px;
+  right:10px;
+  cursor:pointer;
+  text-align:center;
+  transition:.35s;
+  padding:2px;
+  border-radius:6px;
 }
 
 /*----------------------------------scrollbarrrrrr--------------------------------*/
@@ -298,9 +323,12 @@ display:none;
 
 /*---------------------------------meeeeeeeeeedia queeeeeeeeriiiiiiiiiiiiesssssss-----------*/
 
-@media (max-width: 1500px) and (min-width:1350px) { 
+@media (max-width: 1500px){ 
+  .pic{
+    max-width:20%;
+  }
 
-  #homepage{
+  /* #homepage{
     margin-top:8vh;
     height:90vh;
     width:96vw;
@@ -357,8 +385,8 @@ display:none;
       grid-column:2;
       grid-row:3;
       margin-top:-125px;
-    }
-}
+    } */
+} 
 
 @media (max-width: 1375px) { 
 
@@ -368,11 +396,7 @@ display:none;
     margin-top:3vh;
     width:96vw;
   }
-  .bottom{
-    flex-direction:column;
-    width:auto;
-  }
-  .majorarcana{
+  /*.majorarcana{
     margin-top:-60px;
   }
   .soundscapes{
@@ -383,7 +407,7 @@ display:none;
   }
   .spiritmolecule{
     margin-top:80px;
-  }
+  }*/
 
 }
 
@@ -393,10 +417,10 @@ display:none;
 
 @media (max-width: 1300px) { 
 
-}
+} 
 
 @media (max-width: 1275px) { 
-  .majorarcana{
+ /* .majorarcana{
     margin-top:-100px;
   }
   .soundscapes{
@@ -407,7 +431,7 @@ display:none;
   }
   .spiritmolecule{
     margin-top:40px;
-  }
+  }*/
 }
 
 @media (max-width: 1250px) { 
@@ -424,7 +448,10 @@ display:none;
     height:91vh;
     width:95vw;
   }
-  .majorarcana{
+  #top{
+    width:96vw;
+  }
+  /*.majorarcana{
     margin-top:-90px;
   }
   .soundscapes{
@@ -435,7 +462,7 @@ display:none;
   }
   .spiritmolecule{
     margin-top:20px;
-  }
+  }*/
 }
 
 @media (max-width: 1175px) { 
@@ -450,7 +477,7 @@ display:none;
 }
 
 @media (max-width: 1100px) { 
-  .majorarcana{
+  /*.majorarcana{
     margin-top:-120px;
   }
   .soundscapes{
@@ -461,7 +488,7 @@ display:none;
   }
   .spiritmolecule{
     margin-top:-20px;
-  }
+  }*/
 }
 
 @media (max-width: 1075px) { 
@@ -472,7 +499,7 @@ display:none;
 }
 
 @media (max-width: 1025px) { 
-  .majorarcana{
+ /* .majorarcana{
     margin-top:-160px;
   }
   .soundscapes{
@@ -483,7 +510,7 @@ display:none;
   }
   .spiritmolecule{
     margin-top:-80px;
-  }
+  }*/
 }
 
 @media (max-width: 1000px) { 
@@ -500,25 +527,38 @@ display:none;
 }
 
 @media (max-width: 925px) { 
-  .majorarcana{
+  /*.majorarcana{
     margin-top: -200px;
   }
   .soundscapes{
     margin-top: -30px;
-  }
+  }*/
 
-}
+} 
 
 @media (max-width: 900px) { 
-  #index {
-    font-size: 2em;
-  }
   #index p{
     width:85vw;
+  } 
+  #index{
+    font-size:35px;
+    max-height:90vh;
+  }
+  #top{
+    width:94vw;
+  }
+  #about{
+    position:relative;
+    margin-left:-10px;
+    grid-template-columns: 30vw 58vw 2vw;
   }
   #about p{
-    width: 75vw;
+    grid-column:2;
+    max-width:100%;
+    margin:0;
+    left:0;
   }
+/*
   #homepage{
   margin-top:6vh;
   max-height:93vh;
@@ -555,8 +595,8 @@ display:none;
   }
   .reconna{
     margin-top: 60px;
-  }
-}
+  } */
+} 
 
 @media (max-width: 875px) { 
 
@@ -590,41 +630,50 @@ display:none;
 
 @media (max-width: 700px) { 
   #about{
-    position:relative;
-    margin-left:-10px;
-    grid-template-columns: 30vw 55vw 5vw;
-  }
-  #about p{
-    grid-column:2;
-    max-width:100%;
-    margin:0;
-    left:0;
-  }
-
-  #homepage{
-    width:97vw;
-    position:absolute;
-    min-height:100vh;
-    margin-top:3vh;
     display:flex;
     flex-direction:column;
-   /* overflow-y:scroll;*/
+    align-items:flex-start;
+    justify-items:flex-start;
+    margin-top:100px;
+    margin-bottom:160px;
+    width:98vw;
+  }
+  #about p{
+    margin-bottom:15px;
+  }
+  #about img{
+    width:120vw;
+  }
+  #homepage{
+    min-width:100vw;
+    position:absolute;
+    min-height:100vh;
+    margin:0;
+    padding:0;
+    top:0;
+    left:0;
+    right:0;
+    margin-top:0;
+    display:flex;
+    margin-bottom:0;
+    flex-direction:column;
+   overflow:hidden;
   }
   .pic #label{
-    font-size:20px;
+    font-size:16px;
     margin-top:12px;
   }
   .pic{
-    max-width:100%;
+    max-width:30%;
     width:101vw;
     height:auto;
   }
-  .majorarcana, .soundscapes, .discoveryourair, .reconna, .spiritmolecule, .reflections, .postcursor{
+  /*.majorarcana, .soundscapes, .discoveryourair, .reconna, .spiritmolecule, .reflections, .postcursor{
     margin-top:20px;
   }
   .discoveryourair{
     padding-bottom:160px;
-  }
+  }*/
 }
 
 @media (max-width: 675px) { 
@@ -668,19 +717,6 @@ display:none;
   .top{
     padding-bottom:0px;
   }
-  #about{
-    display:flex;
-    flex-direction:column;
-    align-items:flex-start;
-    margin-top:250px;
-    margin-bottom:160px;
-  }
-  #about p{
-    margin-bottom:15px;
-  }
-  #about img{
-    max-width:96%;
-  }
 }
 
 @media (max-width: 475px) { 
@@ -695,7 +731,7 @@ display:none;
 
 
 
-.querytown{
+/*.querytown{
   z-index:1000;
   width:300px;
   font-size:2em;
@@ -705,4 +741,4 @@ display:none;
   position:fixed;
   text-align:center;
   background-color:red;
-}
+}*/
