--- a/css/style.css
+++ b/css/style.css
@@ -634,9 +634,11 @@ display:none;
     flex-direction:column;
     align-items:flex-start;
     justify-items:flex-start;
-    margin-top:160px;
-    margin-bottom:160px;
+    margin-top:100px;
+    top:0;
     width:98vw;
+    padding-bottom:160px;
+    max-height:300%;
   }
   #about p{
     margin-bottom:15px;
