small bug fixes

--- a/css/projects.css
+++ b/css/projects.css
@@ -328,7 +328,7 @@ input:focus::-webkit-slider-runnable-track {
     .projectTitle{
         text-align:center;
     }
-    .top .index{
+    .top .index, .finishedindex{
                 display:none;
                 transition:.2s;
          }
