--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,100 @@
 #projectindex{
+    position:absolute;
+    left:0;
     width:100%;
-    margin-top:7vh;
+    margin-top:10vh;
 }
 .listing{
+    position:relative;
+    padding-left:10px;
+    padding-right:10px;
     width:100%;
     height:20px;
-    border-bottom:1px solid black;
     margin-top:10px;
+    display:grid;
+    grid-template-columns: 35vw 35vw 10vw 20vw;
+    grid-template-rows: auto auto;
+    align-items:center;
+    border-bottom:1px solid black;
+    padding-bottom:12px;
+    margin-bottom:10px;
+    cursor:pointer;
+    transition:.35s;
+}
+.title, .description, .year, .thumbnails{
+    grid-row:1;
+}
+.title, .description{
+    font-family: "Neue Machina";
+    padding-right:20px;
+    line-height:1.2;
+    display:inline;
+}
+.year{
+    font-family: "Saol";
+}
+.thumbnails{
+    display:flex;
+    justify-content:flex-end;
+    padding-right:16px;
+}
+.thumbnails img{
+    height:26px;
+    margin-right:6px;
+    display:inline-block;
+}
+.more{
+    font-family: "Neue Machina";
+    margin-top:16px;
+    padding-left:10px;
+    line-height:1.2;
+    margin-bottom:180px;
+}
+.extender{
+    position:relative;
+    height:300px;
+    grid-row:2;
+    grid-column:1/span 4;
+    margin-right:20px;
+    padding-top:8px;
+}
+/*-----------------------------------meeeeeeeedia queeeeeeeeeeeeeerieesssssssssss-------------------*/
+@media (max-width: 1100px){
+    .listing{
+        grid-template-columns: 35vw 50vw 15vw;
+    }
+    .thumbnails img{
+        display:none;
+    }
+    .thumbnails img:first-of-type{
+        display:block;
+    }
+    .year{
+        display:none;
+    }
+}
+@media (max-width: 800px){
+    .listing{
+        font-size:13px;
+        margin-top:8px;
+        margin-bottom:8px;
+        padding-bottom:8px;
+    }
+    .more{
+        font-size:13px;
+    }
+
+}
+@media (max-width: 675px){
+    .listing{
+        font-size:13px;
+        margin-top:12px;
+        margin-bottom:8px;
+        padding-bottom:16px;
+    }
+    .title, .description{
+        vertical-align:top;
+        padding-right:30px;
+    }
+
 }
